report: changes to methods, background

--- a/report/config.tex
+++ b/report/config.tex
@@ -22,7 +22,8 @@
 
 \usepackage{algorithm}
 \usepackage{algorithmic}
-
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
 \usepackage{amsmath}
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
