report: some changes

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1405,3 +1405,65 @@ series = {ICML '06}
 
   
 
+
+@article{DBLP:journals/corr/abs-1206-3285,
+  author       = {Richard S. Sutton and
+                  Csaba Szepesv{\'{a}}ri and
+                  Alborz Geramifard and
+                  Michael Bowling},
+  title        = {Dyna-Style Planning with Linear Function Approximation and Prioritized
+                  Sweeping},
+  journal      = {CoRR},
+  volume       = {abs/1206.3285},
+  year         = {2012},
+  url          = {http://arxiv.org/abs/1206.3285},
+  eprinttype    = {arXiv},
+  eprint       = {1206.3285},
+  timestamp    = {Mon, 13 Aug 2018 16:46:33 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1206-3285.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{NIPS2007_b7bb35b9,
+ author = {Strehl, Alexander and Littman, Michael},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {J. Platt and D. Koller and Y. Singer and S. Roweis},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Online Linear Regression and Its Application to Model-Based Reinforcement Learning},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2007/file/b7bb35b9c6ca2aee2df08cf09d7016c2-Paper.pdf},
+ volume = {20},
+ year = {2007}
+}
+
+@inproceedings{10.5555/3104482.3104541,
+author = {Deisenroth, Marc Peter and Rasmussen, Carl Edward},
+title = {PILCO: A Model-Based and Data-Efficient Approach to Policy Search},
+year = {2011},
+isbn = {9781450306195},
+publisher = {Omnipress},
+address = {Madison, WI, USA},
+abstract = {In this paper, we introduce PILCO, a practical, data-efficient model-based policy search method. PILCO reduces model bias, one of the key problems of model-based reinforcement learning, in a principled way. By learning a probabilistic dynamics model and explicitly incorporating model uncertainty into long-term planning, PILCO can cope with very little data and facilitates learning from scratch in only a few trials. Policy evaluation is performed in closed form using state-of-the-art approximate inference. Furthermore, policy gradients are computed analytically for policy improvement. We report unprecedented learning efficiency on challenging and high-dimensional control tasks.},
+booktitle = {Proceedings of the 28th International Conference on International Conference on Machine Learning},
+pages = {465–472},
+numpages = {8},
+location = {Bellevue, Washington, USA},
+series = {ICML'11}
+}
+
+@article{lai-allocation,
+  added-at = {2007-07-05T16:17:35.000+0200},
+  author = {Lai, T.L. and Robbins, H.},
+  biburl = {https://www.bibsonomy.org/bibtex/243d5e28aa6ae3446e548319c7f964b7f/jleny},
+  description = {bandit problems},
+  interhash = {c33edf59c35ee99dbaa6f1ce8835b782},
+  intrahash = {43d5e28aa6ae3446e548319c7f964b7f},
+  journal = {Advances in Applied Mathematics},
+  keywords = {imported},
+  pages = {4--22},
+  timestamp = {2007-07-05T16:17:37.000+0200},
+  title = {Asymptotically Efficient Adaptive Allocation Rules},
+  volume = 6,
+  year = 1985
+}
+
