--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1467,3 +1467,36 @@ series = {ICML'11}
   year = 1985
 }
 
+
+@article{plan2explore,
+  author       = {Ramanan Sekar and
+                  Oleh Rybkin and
+                  Kostas Daniilidis and
+                  Pieter Abbeel and
+                  Danijar Hafner and
+                  Deepak Pathak},
+  title        = {Planning to Explore via Self-Supervised World Models},
+  journal      = {CoRR},
+  volume       = {abs/2005.05960},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2005.05960},
+  eprinttype    = {arXiv},
+  eprint       = {2005.05960},
+  timestamp    = {Thu, 14 May 2020 16:56:02 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2005-05960.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ renyi,
+        title={ On Measures of Entropy and Information },
+        author={ Alfréd Rényi },
+        
+        year={ 1961 },
+        publisher={ The Regents of the University of California },
+        
+        pages={ 547-562 },
+        
+        
+        
+          
+      }
