--- a/report/config.tex
+++ b/report/config.tex
@@ -6,7 +6,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage{epsfig,graphics}
-\usepackage{graphicx}
+\usepackage{graphicx, wrapfig}
 \graphicspath{ {./report/assets/} }
 \usepackage{titlesec}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
