--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1500,3 +1500,40 @@ series = {ICML'11}
         
           
       }
+
+
+@inproceedings{10.5555/1867270.1867286,
+author = {Koenig, Sven and Simmons, Reid G.},
+title = {Complexity Analysis of Real-Time Reinforcement Learning},
+year = {1993},
+isbn = {0262510715},
+publisher = {AAAI Press},
+abstract = {This paper analyzes the complexity of on-line reinforcement learning algorithms, namely asynchronous realtime versions of Q-learning and value-iteration, applied to the problem of reaching a goal state in deterministic domains. Previous work had concluded that, in many cases, tabula rasa reinforcement learning was exponential for such problems, or was tractable only if the learning algorithm was augmented. We show that, to the contrary, the algorithms are tractable with only a simple change in the task representation or initialization. We provide tight bounds on the worst-case complexity, and show how the complexity is even smaller if the reinforcement learning algorithms have initial knowledge of the topology of the state space or the domain has certain special properties. We also present a novel bidirectional Q-learning algorithm to find optimal paths from all states to a goal state and show that it is no more complex than the other algorithms.},
+booktitle = {Proceedings of the Eleventh National Conference on Artificial Intelligence},
+pages = {99–105},
+numpages = {7},
+location = {Washington, D.C.},
+series = {AAAI'93}
+}
+
+
+@article{10.5555/1577069.1755867,
+author = {Strehl, Alexander L. and Li, Lihong and Littman, Michael L.},
+title = {Reinforcement Learning in Finite MDPs: PAC Analysis},
+year = {2009},
+issue_date = {12/1/2009},
+publisher = {JMLR.org},
+volume = {10},
+issn = {1532-4435},
+abstract = {We study the problem of learning near-optimal behavior in finite Markov Decision Processes (MDPs) with a polynomial number of samples. These "PAC-MDP" algorithms include the well-known E3 and R-MAX algorithms as well as the more recent Delayed Q-learning algorithm. We summarize the current state-of-the-art by presenting bounds for the problem in a unified theoretical framework. A more refined analysis for upper and lower bounds is presented to yield insight into the differences between the model-free Delayed Q-learning and the model-based R-MAX.},
+journal = {J. Mach. Learn. Res.},
+month = {dec},
+pages = {2413–2444},
+numpages = {32}
+}
+
+@phdthesis{Kakade2003OnTS,
+  title={On the sample complexity of reinforcement learning.},
+  author={Sham M. Kakade},
+  year={2003}
+}
