report: future work

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1537,3 +1537,18 @@ numpages = {32}
   author={Sham M. Kakade},
   year={2003}
 }
+
+@article{DBLP:journals/corr/abs-2107-02603,
+  author       = {Ricardo Luna Gutierrez and
+                  Matteo Leonetti},
+  title        = {Meta-Reinforcement Learning for Heuristic Planning},
+  journal      = {CoRR},
+  volume       = {abs/2107.02603},
+  year         = {2021},
+  url          = {https://arxiv.org/abs/2107.02603},
+  eprinttype    = {arXiv},
+  eprint       = {2107.02603},
+  timestamp    = {Wed, 07 Jul 2021 15:23:11 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2107-02603.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
