Updates from Overleaf

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -32,6 +32,31 @@ can quickly learn a behavior to carry out all the tasks, improves over time, and
 adapts to the environment as it changes.},
 }
 
+@article{POHL1970193,
+title = {Heuristic search viewed as path finding in a graph},
+journal = {Artificial Intelligence},
+volume = {1},
+number = {3},
+pages = {193-204},
+year = {1970},
+issn = {0004-3702},
+doi = {https://doi.org/10.1016/0004-3702(70)90007-X},
+url = {https://www.sciencedirect.com/science/article/pii/000437027090007X},
+author = {Ira Pohl},
+abstract = {This paper presents a particular model of heuristic search as a path-finding problem in a directed graph. A class of graph-searching procedures is described which uses a heuristic function to guide search. Heuristic functions are estimates of the number of edges that remain to be traversed in reaching a goal node. A number of theoretical results for this model, and the intuition for these results, are presented. They relate the efficiency of search to the accuracy of the heuristic function. The results also explore efficiency as a consequence of the reliance or weight placed on the heuristics used.}
+}
+
+@book{nilsson1971problem,
+  title={Problem-solving Methods in Artificial Intelligence},
+  author={Nilsson, N.J.},
+  isbn={9780070465732},
+  lccn={74136181},
+  series={Computer science series},
+  url={https://books.google.co.uk/books?id=VH9QAAAAMAAJ},
+  year={1971},
+  publisher={McGraw-Hill}
+}
+
 @Article{Sutton:1988,
   author =       "Sutton, Richard S.",
   title =        "Learning to Predict By the Methods of Temporal Differences",
@@ -464,7 +489,6 @@ year = {2003},
 issue_date = {3/1/2003},
 publisher = {JMLR.org},
 volume = {3},
-number = {null},
 issn = {1532-4435},
 abstract = {We show how a standard tool from statistics --- namely confidence bounds --- can be used to elegantly deal with situations which exhibit an exploitation-exploration trade-off. Our technique for designing and analyzing algorithms for such situations is general and can be applied when an algorithm has to make exploitation-versus-exploration decisions based on uncertain information provided by a random process. We apply our technique to two models with such an exploitation-exploration trade-off. For the adversarial bandit problem with shifting our new algorithm suffers only O((ST)1/2) regret with high probability over T trials with S shifts. Such a regret bound was previously known only in expectation. The second model we consider is associative reinforcement learning with linear value functions. For this model our technique improves the regret from O(T3/4) to O(T1/2).},
 journal = {J. Mach. Learn. Res.},
@@ -1551,4 +1575,24 @@ numpages = {32}
   timestamp    = {Wed, 07 Jul 2021 15:23:11 +0200},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2107-02603.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{hu2023planning,
+      title={Planning Goals for Exploration}, 
+      author={Edward S. Hu and Richard Chang and Oleh Rybkin and Dinesh Jayaraman},
+      year={2023},
+      eprint={2303.13002},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{goexplore,
+author = {Ecoffet, Adrien and Huizinga, Joost and Lehman, Joel and Stanley, Kenneth and Clune, Jeff},
+year = {2021},
+month = {02},
+pages = {580-586},
+title = {First return, then explore},
+volume = {590},
+journal = {Nature},
+doi = {10.1038/s41586-020-03157-9}
 }
