--- a/report/config.tex
+++ b/report/config.tex
@@ -5,6 +5,15 @@
 \usepackage[export]{adjustbox}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
+\usepackage{amsthm}
+\theoremstyle{plain}
+\newtheorem{thm}{Theorem}[chapter] % reset theorem numbering for each chapter
+\usepackage{float}
+\theoremstyle{definition}
+\newtheorem{defn}[thm]{Definition} % definition numbers are dependent on theorem numbers
+\newtheorem{exmp}[thm]{Example} % same for example numbers
+
+
 \usepackage{epsfig,graphics}
 \usepackage{graphicx, wrapfig}
 \graphicspath{ {./report/assets/} }
