--- a/report/summary.tex
+++ b/report/summary.tex
@@ -1,10 +1,50 @@
 TODO:
 \begin{itemize}
     \item Finalise introduction. It needs shortening.
-    \item Function approximation; model-learning.
     \item Add the simple "PRL" agent to background research;.
     \item finish Exploration survey
     \item Benchmarking!!!
     \item Sample efficiency analysis, complexity analysis
     \item ENSURE BACKGROUND EQUATIONS ARE CORRECT!!!!! Add general Bellman equation
+    \item
+Background research: Have I ...
+
+    Explained the problem clearly?
+    Identified relevant areas for investigation and discussed them in report under appropriate headings and critically?
+    Reviewed previous attempts to solve this and similar problems?
+    Justified any claims made using credible primary or secondary sources?
+
+
+Methods: Is it clear that ...
+
+    The solution exists?
+    I have produced the deliverables specified?
+    Appropriate steps or standards were taken to ensure a quality output (e.g. design documentation, comments in code)?
+    The challenges were clearly articulated?
+
+
+Results and Discussion: Is it clear that ...
+
+    Appropriate tests and evaluation were conducted and analysed to validate the quality of deliverables within the remit of the project?
+    There are objective criteria for evaluating the achievement of the project against the initial problem?
+    These criteria are justified?
+    The criteria have been used professionally to judge whether the problem has been solved?
+
+
+Presentation: Have I ...
+
+    Given the report an appropriate title?
+    Structured the report appropriately, with appendices used for peripheral content and a single references list containing only sources referred to in the report?
+    Written in a style appropriate to the computing audience?
+    Written in a consistent manner e.g., tense, use of acronyms, citation style?
+    Conformed to the requirements for page layout, font size, page limit etc. ?
+    Ensured that all material included is correctly attributed?
+
+
+Self-appraisal: Have I...
+
+    Considered how my work could be extended?
+    Included mature personal reflection which leads to lessons learnt?
+    Suggested how the problems encountered might be avoided?
+    Considered legal, social, ethical and professional issues, with justification if one or more are not relevant?
 \end{itemize}
